[package]
name = "rust_loadbalancer"
version = "1.0.0"
edition = "2021"
authors = ["Caaams, KC"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
regex = "1.5"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
rand = "*"
http = "1.0.0"
httparse = "1.3.4"
tokio = { version = "1.36.0", features = ["full"] }